--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("./buffyBackground.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
 }
 
 code {
