--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'buffiedregular';
+    src: url(buffied/BUFFIED_.TTF);
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 .App {
   display: flex;
   flex-direction: column;
@@ -6,6 +14,8 @@
 
 h1 {
   text-align: center;
+  font-family: 'buffiedregular';
+  font-size: 80px;
 }
 
 
