--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,13 @@
 li {
   border: 2px solid white;
   height: 300px;
-  width: 100px;
   margin: 0 3px 0 3px;
+  transition: all .2s ease-in-out;
+  width: 100px;
 }
+
+li:hover {
+  transform: scale(1.1);
+}
+
+
