--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,40 @@
 li {
   border: 2px solid white;
-  height: 300px;
-  width: 100px;
+  height: 400px;
+  width: 300px;
   margin: 0 3px 0 3px;
+  transition: 1s;
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-right: 3px;
+  margin-left: 3px;
+  color: white;
+  letter-spacing: 1px;
+/*  display: none;*/
+  /*max-width: 900px;*/
+  list-style-type: none;
+  text-align: center;
+
 }
+
+
+.fa-plus {
+  color: black;
+  font-size: 20px;
+  opacity: 1;
+  transition: 1s;
+  margin: 20px 0 10px 0;
+  
+}
+
+.fa-plus:hover {
+  font-size: 30px;
+
+}
+
+/*li:hover {
+  height: 400px;
+  width: 500px;
+
+}*/
