--- a/src/Card.css
+++ b/src/Card.css
@@ -2,7 +2,6 @@ li {
   border: 2px solid white;
   height: 400px;
   width: 300px;
-  margin: 0 3px 0 3px;
   transition: 1s;
   display:flex;
   flex-direction: column;
@@ -11,8 +10,6 @@ li {
   margin-left: 3px;
   color: white;
   letter-spacing: 1px;
-/*  display: none;*/
-  /*max-width: 900px;*/
   list-style-type: none;
   text-align: center;
 
@@ -23,7 +20,7 @@ li {
   color: black;
   font-size: 20px;
   opacity: 1;
-  transition: 1s;
+  transition: .3s;
   margin: 20px 0 10px 0;
   
 }
