--- a/src/Card.css
+++ b/src/Card.css
@@ -1,7 +1,14 @@
+h3 {
+  font-size: 14px;
+  margin: 14px;
+}
+
+p {
+  font-size: 10px;
+  margin: 14px;
+}
+
 li {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   border: 2px solid white;
   color: white;
   display:flex;
@@ -14,10 +21,48 @@ li {
   text-align: center;
   transition: all .2s ease-in-out;
   width: 180px;
+  position: relative;
 }
 
 li:hover {
   transform: scale(1.1);
+}
+
+.caption, h3, p {
+  opacity: 0;
+  z-index: 2;
+  transition: .7s;
+}
+
+.caption:before {
+  content: '';
+  position: absolute;
+  z-index: 1;
+}
+
+.caption:after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+}
+
+.background {
+  position: absolute;
+  height: 300px;
+  width: 180px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+}
+
+.background:hover {
+  background-color: black;
+  opacity: .7;
+}
+
+li:hover .caption, h3, p {
+  opacity: 1;
 }
 
 .fa-plus {
@@ -29,6 +74,6 @@ li:hover {
 }
 
 .fa-plus:hover {
-  font-size: 30px;
+  transform: scale(1.4);
 }
 
