--- a/src/WatchlistCard.css
+++ b/src/WatchlistCard.css
@@ -1,3 +1,11 @@
+h2 {
+  color: white;
+}
+
+h3 {
+  font-size: 20px;
+}
+
 .watchlist-card {
   background: url('https://cdn.hipwallpaper.com/i/63/31/v0qCxb.png');
   background-size: cover;
@@ -5,10 +13,12 @@
   height: 110px;
 }
 
-h2 {
-  color: white;
+.fa-times-circle {
+  font-size: 20px;
+  transition: .3;
 }
 
-h3 {
-  font-size: 20px;
+.fa-times-circle:hover {
+  transform: scale(1.3);
+  cursor: pointer;
 }
