--- a/src/Card.css
+++ b/src/Card.css
@@ -6,12 +6,17 @@
        3px 3px 5px #000, 1px 1px 1px #000, 3px 3px 1px #000, 2px 2px 2px #fff, 2px 2px 2px #000
 }
 
-h3 {
+h3, h4 {
   font-size: 15px;
   margin: 14px;
   font-weight: 700;
   font-family: 'Open Sans Condensed', sans-serif;
   text-transform: uppercase;
+}
+
+.avg-rating {
+  font-size: 10px;
+
 }
 
 p {
@@ -45,6 +50,7 @@ li {
 
 li:hover {
   transform: scale(1.1);
+  z-index: 2;
 }
 
 li:hover .card-title {
@@ -83,26 +89,22 @@ li:hover .card-title {
   opacity: .4;
 }
 
-li:hover .caption, h3, p {
+li:hover .caption, h3, p, h4 {
   opacity: 1;
   display: block;
 }
 
-.fa-plus {
+.fa-plus-square {
   color: #fff;
-  font-size: 15px;
+  font-size: 25px;
   margin: 20px 0 10px 0; 
   opacity: 1;
   transition: .3s;
-  border: 1px solid white;
-  border-radius: 50%;
-  padding: 5px;
-  background-color: black;
   opacity: .8;
 }
 
-.fa-plus:hover, .fa-imdb:hover {
-  transform: scale(1.3);
+.fa-plus-square:hover, .fa-imdb:hover {
+  transform: scale(1.15);
   cursor: pointer;
 }
 
@@ -111,10 +113,11 @@ li:hover .caption, h3, p {
 display: flex;
 justify-content: space-between;
 align-items: center;
+margin: 0 10px 0 10px;
 }
 
 .fa-imdb {
-  font-size: 25px;
+  font-size: 23px;
   opacity: 1;
   transition: .3s;
   margin-right: 10px;
@@ -131,4 +134,6 @@ align-items: center;
 li:hover .overlay {
   opacity: .7;
 }
+
+
 
