--- a/src/Card.css
+++ b/src/Card.css
@@ -96,8 +96,8 @@ li:hover .caption, h3, p, h4 {
 
 .fa-plus-square {
   color: #fff;
-  font-size: 25px;
-  margin: 20px 0 10px 0; 
+  font-size: 23px;
+ /* margin: 20px 0 10px 0; */
   opacity: 1;
   transition: .3s;
   opacity: .8;
@@ -113,7 +113,7 @@ li:hover .caption, h3, p, h4 {
 display: flex;
 justify-content: space-between;
 align-items: center;
-margin: 0 10px 0 10px;
+margin: 0 10px 10px 10px;
 }
 
 .fa-imdb {
