--- a/src/Card.css
+++ b/src/Card.css
@@ -114,9 +114,57 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 margin: 0 10px 10px 10px;
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+
 }
 
-.fa-imdb {
+.data-tooltip {
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+
+}
+
+.data-tooltip:before,
+.data-tooltip:after {
+  visibility: hidden;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.data-tooltip:before {
+  position: absolute;
+  bottom: 150%;
+  left: 50%;
+  margin-bottom: 5px;
+  margin-left: -80px;
+  padding: 7px;
+  width: 160px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #000;
+  background-color: hsla(0, 0%, 20%, 0.9);
+  color: #fff;
+  content: attr(data-tooltip);
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+.data-tooltip:hover:before,
+.data-tooltip:hover:after {
+  visibility: visible;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+
+.data-tooltip {
   font-size: 23px;
   opacity: 1;
   transition: .3s;
@@ -134,6 +182,15 @@ margin: 0 10px 10px 10px;
 li:hover .overlay {
   opacity: .7;
 }
+
+a:link {
+color: white;
+}
+
+a:visited {
+  color: white;
+}
+
 
 
 
