--- a/src/Card.css
+++ b/src/Card.css
@@ -120,30 +120,29 @@ margin: 0 10px 10px 10px;
 
 }
 
-.data-tooltip {
+[data-tooltip] {
   position: relative;
   z-index: 2;
   cursor: pointer;
 
 }
 
-.data-tooltip:before,
-.data-tooltip:after {
+[data-tooltip]:before,
+[data-tooltip]:after {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   pointer-events: none;
 }
-
-.data-tooltip:before {
+[data-tooltip]:before {
   position: absolute;
-  bottom: 150%;
+  bottom: -150%;
   left: 50%;
   margin-bottom: 5px;
   margin-left: -80px;
   padding: 7px;
-  width: 160px;
+  width: 100px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -156,15 +155,31 @@ margin: 0 10px 10px 10px;
   line-height: 1.2;
 }
 
-.data-tooltip:hover:before,
-.data-tooltip:hover:after {
+/*[data-tooltip]:after {
+  position: absolute;
+  bottom: -140%;
+  left: 50%;
+  margin-left: -5px;
+  width: 0;
+  border-top: 5px solid #000;
+  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  content: " ";
+  font-size: 0;
+  line-height: 0;
+}*/
+
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
   visibility: visible;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
+  font-size: 9px;
 }
 
-.data-tooltip {
+[data-tooltip] {
   font-size: 23px;
   opacity: 1;
   transition: .3s;
