--- a/src/WatchlistCard.scss
+++ b/src/WatchlistCard.scss
@@ -17,9 +17,9 @@ h2 {
 .fa-times-circle {
   font-size: 20px;
   transition: .3s;
-}
-
-.fa-times-circle:hover {
-  transform: scale(1.3);
-  cursor: pointer;
+  
+  &:hover {
+    transform: scale(1.3);
+    cursor: pointer;
+  }
 }
