--- a/src/WatchlistCard.css
+++ b/src/WatchlistCard.css
@@ -8,7 +8,7 @@ h2 {
 }
 
 .watchlist-card {
-/*  background: url('https://cdn.hipwallpaper.com/i/63/31/v0qCxb.png');*/
+  background: url('https://cdn.hipwallpaper.com/i/63/31/v0qCxb.png');
   background-size: cover;
   padding: 10px;
   height: 110px;
