--- a/src/WatchlistCard.scss
+++ b/src/WatchlistCard.scss
@@ -5,21 +5,25 @@ h2 {
 .watchlist-title {
   font-size: 16px;
   margin: 0;
+  z-index: 2;
 }
 
 .watchlist-card {
   background: url('https://cdn.hipwallpaper.com/i/63/31/v0qCxb.png');
   background-size: cover;
-  padding: 10px;
+  /*padding: 10px;*/
   height: 110px;
+  position: relative;
 }
 
 .fa-times-circle {
   font-size: 20px;
   transition: .3s;
+  z-index: 2;
+  padding-bottom: 10px;
   
   &:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
     cursor: pointer;
   }
 }
