--- a/src/Carousel.scss
+++ b/src/Carousel.scss
@@ -28,6 +28,7 @@ ul {
   position: absolute;
   top: 40%;
   z-index: 50;
+  outline: none;
 }
 
 .fa-angle-left, 
@@ -36,6 +37,7 @@ ul {
   font-size: 50px;
   transition: .2s;
 }
+
 
 .fa-angle-left:hover, 
 .fa-angle-right:hover {
