--- a/src/Card.scss
+++ b/src/Card.scss
@@ -14,7 +14,7 @@ h3, h4 {
   text-transform: uppercase;
 }
 
-.avg-rating {
+.avg-rating, .death-count {
   font-size: 10px;
 }
 
@@ -62,6 +62,7 @@ li {
 
   &:hover .overlay {
     opacity: .7;
+    background-color: #000;
   }
 }
 
@@ -205,14 +206,18 @@ p {
 }
 
 .overlay {
-  background-color: #000;
-  height: 100%;
-  opacity: 0;
-  position: absolute;
-  width: 100%;
+ background: linear-gradient(0deg, 
+  rgba(0,0,0,1) 0%,
+  rgba(0,0,0,0.5060399159663865) 42%,
+  rgba(0,0,0,0) 100%);
+ height: 100%;
+ position: absolute;
+ width: 100%;
+ z-index: -1;
 }
 
 a:link,
 a:visited {
 color: white;
 }
+
