--- a/src/Watchlist.scss
+++ b/src/Watchlist.scss
@@ -14,6 +14,14 @@
   overflow: hidden;
   padding: 20px 0;
 }
+.watchlist-header {
+  font-family: 'buffiedregular';
+  font-size: 61px;
+  margin: 0;
+  text-shadow: 3px 3px 8px #b90707, 3px 3px 8px #000, -1px -1px 0 #000, -1px 2px 2px #000, 2px 2px 2px #000;
+  color: #e4e4e4;
+}
+
 
 h2 {
   font-family: 'Open Sans Condensed', sans-serif;
