Fix carousel buttons

--- a/src/Carousel.scss
+++ b/src/Carousel.scss
@@ -38,7 +38,6 @@ ul {
   transition: .2s;
 }
 
-
 .fa-angle-left:hover, 
 .fa-angle-right:hover {
   cursor: pointer;
@@ -47,6 +46,11 @@ ul {
 
 .right-button {
   left: 97%;
+}
+
+#carousel-button {
+  top: 38%;
+
 }
 
 
