--- a/src/Card.scss
+++ b/src/Card.scss
@@ -135,8 +135,8 @@ p {
 [data-tooltip]:before {
   position: absolute;
   bottom: -150%;
-  left: 50%;
-  margin-left: -80px;
+  left: -110%;
+  /*margin-left: -180px;*/
   padding: 3px;
   width: 100px;
   height: 13px;
@@ -203,6 +203,14 @@ p {
     opacity: 1;
     font-size: 9px;
   }
+}
+
+.plus[data-tooltip]:before {
+  margin-left: -55px;
+}
+
+.imdb[data-tooltip]:before {
+  margin-left: -60px;
 }
 
 .overlay {
