--- a/src/Card.scss
+++ b/src/Card.scss
@@ -21,6 +21,9 @@ h3, h4 {
 p {
   font-size: 10px;
   margin: 14px;
+  display: none;
+  z-index: 2;
+  transition: .7s;
 }
 
 .episode-name {
@@ -67,23 +70,17 @@ li {
 }
 
 
-.caption, 
-p {
+.caption {
   display: none;
   z-index: 2;
   transition: .7s;
-}
 
-.caption:before {
-  content: '';
-  position: absolute;
-  z-index: 1;
-}
-
-.caption:after {
-  content: '';
-  position: absolute;
-  z-index: 1;
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+  }
 }
 
 .background {
@@ -102,16 +99,20 @@ p {
   opacity: 1;
   transition: .3s;
   opacity: .8;
-}
 
-.fa-plus-square:hover, 
-.fa-imdb:hover {
-  transform: scale(1.2);
-  cursor: pointer;
+  &:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+  }
 }
 
 .fa-imdb {
   transition: .3s;
+
+  &:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+  }
 }
 
 .card-buttons {
@@ -123,13 +124,6 @@ p {
   position: relative;
   z-index: 2;
   cursor: pointer;
-}
-
-[data-tooltip]:before,
-[data-tooltip]:after {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
 }
 
 [data-tooltip]:before {
@@ -144,21 +138,12 @@ p {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  background-color: #000;
   background-color: #fff;
   color: hsla(0, 0%, 20%, 0.9);
   content: attr(data-tooltip);
   font-size: 14px;
   line-height: 1.2;
   font-weight: 700;
-}
-
-
-[data-tooltip]:hover:before,
-[data-tooltip]:hover:after {
-  visibility: visible;
-  opacity: 1;
-  font-size: 9px;
 }
 
 [data-tooltip] {
@@ -206,18 +191,17 @@ p {
 }
 
 .overlay {
- background: linear-gradient(0deg, 
-  rgba(0,0,0,1) 0%,
-  rgba(0,0,0,0.5060399159663865) 42%,
-  rgba(0,0,0,0) 100%);
- height: 100%;
- position: absolute;
- width: 100%;
- z-index: -1;
+  background: linear-gradient(0deg, 
+              rgba(0,0,0,1) 0%,
+              rgba(0,0,0,0.5060399159663865) 42%,
+              rgba(0,0,0,0) 100%);
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
 }
 
-a:link,
-a:visited {
-color: white;
+a {
+  color: white;
 }
 
