--- a/src/Card.scss
+++ b/src/Card.scss
@@ -3,7 +3,9 @@
   margin-bottom: 0;
   font-family: 'buffiedregular';
   text-shadow:
-    3px 3px 5px #000, 1px 1px 1px #000, 3px 3px 1px #000, 2px 2px 2px #fff, 2px 2px 2px #000
+    3px 3px 5px #000, 1px 1px 1px #000, 
+    3px 3px 1px #000, 2px 2px 2px #fff, 
+    2px 2px 2px #000
 }
 
 h3, h4 {
@@ -19,18 +21,22 @@ h3, h4 {
 }
 
 p {
+  display: none;
   font-size: 10px;
   margin: 14px;
-  display: none;
-  z-index: 2;
   transition: .7s;
+  z-index: 2;
+}
+
+a {
+  color: white;
 }
 
 .episode-name {
-  font-weight: 700;
   font-size: 15px;
-  margin-top: 0;
+  font-weight: 700;
   margin-bottom: 0;
+  margin-top: 0;
   z-index: 2;
 }
 
@@ -59,16 +65,15 @@ li {
   }
 
   &:hover .caption, h3, p, h4 {
-    opacity: 1;
     display: block;
+    opacity: 1;
   }
 
   &:hover .overlay {
-    opacity: .7;
     background-color: #000;
+    opacity: .7;
   }
 }
-
 
 .caption {
   display: none;
@@ -123,38 +128,15 @@ li {
   margin: 0 10px 10px 10px;
   position: relative;
   z-index: 2;
-  cursor: pointer;
-}
-
-[data-tooltip]:before {
-  position: absolute;
-  bottom: -150%;
-  left: -110%;
-  /*margin-left: -180px;*/
-  padding: 3px;
-  width: 100px;
-  height: 13px;
-  padding-bottom: 10px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  background-color: #fff;
-  color: hsla(0, 0%, 20%, 0.9);
-  content: attr(data-tooltip);
-  font-size: 14px;
-  line-height: 1.2;
-  font-weight: 700;
 }
 
 [data-tooltip] {
-  cursor: pointer;
   font-size: 23px;
   opacity: 1;
   position: relative;
-  transition: .3s;
   z-index: 2;
 
-  &:before,
+
   &:after {
     visibility: hidden;
     opacity: 0;
@@ -162,31 +144,30 @@ li {
   }
 
   &:before {
-    position: absolute;
-    bottom: -150%;
-    left: 50%;
-    margin-left: -80px;
-    padding: 3px;
-    width: 100px;
-    padding-bottom: 10px;
-    -webkit-border-radius: 3px;
+    @extend :after;
     -moz-border-radius: 3px;
-    border-radius: 3px;
-    background-color: #000;
+    -webkit-border-radius: 3px;
     background-color: #fff;
+    border-radius: 3px;
+    bottom: -150%;
     color: hsla(0, 0%, 20%, 0.9);
     content: attr(data-tooltip);
-    text-align: center;
     font-size: 14px;
-    line-height: 1.2;
     font-weight: 700;
+    height: 13px;
+    left: 50%;
+    line-height: 1.2;
+    padding: 3px 3px 10px;
+    position: absolute;
+    text-align: center;
+    width: 100px;
   }
 
   &:hover:before,
   &:hover:after {
-    visibility: visible;
-    opacity: 1;
     font-size: 9px;
+    opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -209,7 +190,4 @@ li {
   z-index: -1;
 }
 
-a {
-  color: white;
-}
 
