--- a/src/Watchlist.scss
+++ b/src/Watchlist.scss
@@ -9,17 +9,19 @@
 
 .watchlist {
   display: flex;
-  width: 86.5%;
   justify-content: center;
   overflow: hidden;
   padding: 20px 0;
+  width: 86.5%;
 }
 .watchlist-header {
+  color: #e4e4e4;
   font-family: 'buffiedregular';
   font-size: 61px;
   margin: 0;
-  text-shadow: 3px 3px 8px #b90707, 3px 3px 8px #000, -1px -1px 0 #000, -1px 2px 2px #000, 2px 2px 2px #000;
-  color: #e4e4e4;
+  text-shadow: 3px 3px 8px #b90707, 
+               3px 3px 8px #000, -1px -1px 0 #000, 
+              -1px 2px 2px #000, 2px 2px 2px #000;
 }
 
 
