--- a/src/_card.scss
+++ b/src/_card.scss
@@ -8,24 +8,8 @@
     2px 2px 2px #000
 }
 
-h3, h4 {
-  font-size: 15px;
-  margin: 14px;
-  font-weight: 700;
-  font-family: 'Open Sans Condensed', sans-serif;
-  text-transform: uppercase;
-}
-
 .avg-rating, .death-count {
   font-size: 10px;
-}
-
-p {
-  display: none;
-  font-size: 10px;
-  margin: 14px;
-  transition: .7s;
-  z-index: 2;
 }
 
 a {
@@ -33,10 +17,8 @@ a {
 }
 
 .episode-name {
-  font-size: 15px;
   font-weight: 700;
-  margin-bottom: 0;
-  margin-top: 0;
+  margin: 0 14px;
   z-index: 2;
 }
 
