--- a/src/_watchlistCard.scss
+++ b/src/_watchlistCard.scss
@@ -1,7 +1,3 @@
-h2 {
-  color: white;
-}
-
 .watchlist-title {
   padding-top: 15px;
   font-size: 16px;
@@ -30,6 +26,7 @@ h2 {
 
 .watchlist-button {
   display: none;
+  top: 51%;
 }
 
 .show {
