--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @font-face {
-    font-family: 'buffiedregular';
-    font-style: normal;
-    font-weight: normal;
-    src: url(buffied/BUFFIED_.TTF);
+  font-family: 'buffiedregular';
+  font-style: normal;
+  font-weight: normal;
+  src: url(buffied/BUFFIED_.TTF);
 }
 
 .App {
@@ -36,12 +36,12 @@
 select {
   -webkit-appearance: none;
   appearance: none;
-  border: 1px solid #000;
+  border: 1px solid #000000b3;
   border-radius: 0px;
-  background: linear-gradient(#000, #000) no-repeat,
-              linear-gradient(-135deg, rgba(255,255,255,0) 50%, white 50%) no-repeat,
-              linear-gradient(-225deg, rgba(255,255,255,0) 50%, white 50%) no-repeat,
-              linear-gradient(#000, #000) no-repeat;
+  background: linear-gradient(#0000008a, #0000006b) no-repeat, 
+              linear-gradient(-135deg, rgba(255, 255, 255, 0) 50%, white 50%) no-repeat, 
+              linear-gradient(-225deg, rgba(255, 255, 255, 0) 50%, white 50%) no-repeat, 
+              linear-gradient(#0000008f, #000000c4) no-repeat;
   background-color: white;
   background-size: 1px 100%, 20px 20px, 20px 20px, 20px 60%;
   background-position: right 20px center, right bottom, right bottom, right bottom;   
