--- a/src/_search.scss
+++ b/src/_search.scss
@@ -2,6 +2,7 @@ input {
   border: 1px solid #000000b3;
   height: 23px;
   margin-bottom: 50px;
+  padding-left: 5px;
   width: 550px;
 
   &::-webkit-calendar-picker-indicator {
